@@ -1,1 +1,0 @@
-service_name: travis-ci
